--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-id-swiper": "^4.0.0",
+    "react-scripts": "3.4.3",
+    "swiper": "^6.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +32,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0",
+    "sass": "^1.26.11"
   }
 }
